@@ -1,6 +1,9 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- CIrrDeviceWin32::yield() now uses Sleep(0) instead of Sleep(1). 
+  We had Sleep(1) to allow yielding to all processes back in Windows XP time.
+  But a) This caused Windows apps to sleep for 15ms usually and b) behavior for Sleep(0) was changed after Window XP to do what we want it to do.
 - Add ICursorControl::getReferenceRect
 - Fix: Listbox no longer sending EGET_LISTBOX_SELECTED_AGAIN instead of EGET_LISTBOX_CHANGED when pressed mouse was moved over item before releasing the mouse button
 - Listbox items can now change individual background colors
